[package]
name = "rafx-renderer"
version = "0.0.16"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

[features]
rafx-empty = ["rafx-assets/rafx-empty"]
rafx-dx12 = ["rafx-assets/rafx-dx12"]
rafx-vulkan = ["rafx-assets/rafx-vulkan"]
rafx-metal = ["rafx-assets/rafx-metal"]
rafx-gles2 = ["rafx-assets/rafx-gles2"]
rafx-gles3 = ["rafx-assets/rafx-gles3"]

[dependencies]
rafx-api = { version = "0.0.16", path = "../rafx-api" }
rafx-base = { version = "0.0.16", path = "../rafx-base" }
rafx-framework = { version = "0.0.16", path = "../rafx-framework" }
rafx-assets = { version = "0.0.16", path = "../rafx-assets" }
rafx-visibility = { version = "0.0.16", path = "../rafx-visibility" }

glam = { version = "0.13.1", features = [ "serde" ] }
crossbeam-channel = "0.5"
log = "0.4"
profiling = "1.0.1"
fnv = "1.0"

