[package]
name = "rafx-resources"
version = "0.0.2"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafx-api = { version = "0.0.2", path = "../rafx-api", features = ["serde-support"] }
rafx-base = { version = "0.0.2", path = "../rafx-base" }
rafx-nodes = { version = "0.0.2", path = "../rafx-nodes" }

arrayvec = "0.5"
bitflags = "1.2"
crossbeam-channel = "0.5"
log = "0.4"
fnv = "1.0"
profiling = "0.1.4"
serde = { version = "1", features = ["serde_derive"] }
serde_bytes = "0.11"

[features]
default = []
rafx-vulkan = ["rafx-api/rafx-vulkan"]
rafx-metal = ["rafx-api/rafx-metal"]
static-vulkan = ["rafx-api/static-vulkan"]

profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
