[package]
name = "rafx-shader-processor"
version = "0.0.3"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

publish = false

[dependencies]
rafx-framework = { version = "0.0.3", path = "../rafx-framework" }
rafx-api = { version = "0.0.3", path = "../rafx-api", features = ["serde-support"] }

fnv = "1.0"
structopt = "0.3"
spirv-reflect = "0.2"
shaderc = "0.6"
spirv_cross = { version = "0.22", features = ["glsl", "hlsl", "msl"] }
glob = "0.3"

ron = "0.6"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.6"
heck = "0.3"

[dev-dependencies]
