[package]
name = "rafx-visibility"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

rafx-base = { version = "0.0.1", path = "../rafx-base" }
rafx-nodes = { version = "0.0.1", path = "../rafx-nodes" }