[package]
name = "rafx-visibility"
version = "0.0.15"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

[dependencies]
glam = { version = "0.13.1", features = [ "serde" ] }
slotmap = "1.0.2"
crossbeam-channel = "0.5"
rustc-hash = "1.1.0"
parking_lot = "0.11.1"
profiling = "1.0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[features]
