[package]
name = "rafx"
version = "0.0.2"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

[dependencies]
rafx-base = { version = "0.0.2", path = "../rafx-base" }
rafx-api = { version = "0.0.2", path = "../rafx-api" }
rafx-nodes = { version = "0.0.2", path = "../rafx-nodes", optional = true }
rafx-visibility = { version = "0.0.2", path = "../rafx-visibility", optional = true }
rafx-resources = { version = "0.0.2", path = "../rafx-resources", optional = true }
rafx-assets = { version = "0.0.2", path = "../rafx-assets", optional = true }

[dev-dependencies]
log = "0.4"
env_logger = "0.6"
legion = { version = "0.3.0", default-features = false }
sdl2 = { version = ">=0.34", features = ["raw-window-handle", "bundled", "static-link"] }
ash = ">=0.30"
glam = "0.8.6"
profiling = "0.1.4"
bincode = "1.3.1"

[features]
default = []

#
# Backends
#
rafx-vulkan = ["rafx-api/rafx-vulkan", "rafx-assets/rafx-vulkan"]
rafx-metal = ["rafx-api/rafx-metal", "rafx-assets/rafx-metal"]

# Vulkan-specific feature, use statically-linked vulkan instead of dynamically loading it
static-vulkan = ["rafx-api/static-vulkan"]

# These control how much of the library (and dependencies) we include
# API/Base: (Always included) Raw graphics API abstraction with multiple backends. Some data structures.
# Nodes: A data structure and job system for gathering and drawing renderables. Includes the concepts of views and
#        phases.
# Resources: Object lifetime tracking and render graph
# Assets: Integrates atelier-assets to provide a full asset pipeline
nodes = ["rafx-nodes", "rafx-visibility"]
resources = ["rafx-resources", "nodes"]
assets = ["rafx-assets", "resources"]

#
# Profiling features - passes down features to crates contained within this one
#
profile-with-puffin = [
    "rafx-resources/profile-with-puffin",
    "rafx-assets/profile-with-puffin",
    "rafx-api/profile-with-puffin"
]

profile-with-optick = [
    "rafx-resources/profile-with-optick",
    "rafx-assets/profile-with-optick",
    "rafx-api/profile-with-optick"
]

profile-with-superluminal = [
    "rafx-resources/profile-with-superluminal",
    "rafx-assets/profile-with-superluminal",
    "rafx-api/profile-with-superluminal"
]

profile-with-tracing = [
    "rafx-resources/profile-with-tracing",
    "rafx-assets/profile-with-tracing",
    "rafx-api/profile-with-tracing"
]

#
# Examples
#

[[example]]
name = "nodes_api_design"
path = "../rafx/examples/nodes_api_design/nodes_api_design.rs"
required-features = ["resources"]

[[example]]
name = "api_triangle"
path = "examples/api_triangle/api_triangle.rs"
required-features = []

[[example]]
name = "render_graph_triangle"
path = "examples/render_graph_triangle/render_graph_triangle.rs"
required-features = ["resources"]
