[package]
name = "renderer-assets"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">0.30"
sdl2 = { version = ">=0.33" }
imgui = "0.4"
imgui-sdl2 = "0.11.0"
image = "0.23"
enumflags2 = { version = "0.6", features = ["serde"] }
#option_set = "0.1"
bitflags = "1.2"

renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }

renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }

crossbeam-channel = "0.4.2"

vk-mem = "0.2"

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3", features = ["serde_importers"] }

log="0.4"
glam = "0.8.6"
rand = "0.7.3"
pcg_rand = "0.11.1"

fnv = "1.0"

serde = "1"
serde_bytes = "0.11"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"

bincode = "1.3.1"
mopa = "0.2"

ron = "0.5"

arrayvec = "0.5"

[dev-dependencies]
env_logger = "0.6"