[package]
name = "renderer-assets"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }
renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }
renderer-resources = { path = "../renderer-resources" }

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "renderer", features = ["serde_importers"] }

ash = ">0.30"
vk-mem = "0.2"

#TODO: Not sure we really need both
image = "0.23.12"
image2 = { version = "0.11", features = [ "ser" ] }

crossbeam-channel = "0.4.2"

log = "0.4"

fnv = "1.0"

serde = { version = "1", features = ["serde_derive"] }
serde_bytes = "0.11"
uuid = "0.8"
type-uuid = "0.1"

bincode = "1.3.1"
ron = "0.5"

arrayvec = "0.5"

profiling = "0.1.4"

#shaderc = "0.6"
spirv-reflect = "0.2"
#spirv_cross = "0.22"

[dev-dependencies]
env_logger = "0.6"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]