[package]
name = "renderer-ext"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer-base = { path = "../renderer-base" }
legion = "0.2.1"

log="0.4"
glam = "0.8.6"