[package]
name = "renderer-ext"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.30"
imgui = "0.3"
imgui-sdl2 = "0.9.0"
sdl2 = { version = "0.33", features = ["bundled", "static-link"] }
image = "0.23"

renderer-base = { path = "../renderer-base" }

renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }

#legion = "0.2.1"
legion = { git = "https://github.com/TomGillen/legion.git" }

log="0.4"
glam = "0.8.6"
rand = "0.7.3"
pcg_rand = "0.11.1"