[package]
name = "renderer-profile"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin = { version = "0.3", optional = true }
optick = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = []
profile-with-puffin = ["puffin"]
profile-with-optick = ["optick"]
profile-with-tracing = ["tracing"]
