[package]
name = "renderer-resources"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }
renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }

ash = ">0.30"

enumflags2 = { version = "0.6", features = ["serde"] }
bitflags = "1.2"

crossbeam-channel = "0.4.2"
log = "0.4"
fnv = "1.0"
serde = { version = "1", features = ["serde_derive"] }
arrayvec = "0.5"

profiling = "0.1.4"

[dev-dependencies]
env_logger = "0.6"
memoffset = "0.6"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
