[package]
name = "renderer-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
sdl2 = { version = ">=0.33" }

renderer-base = { version = "0.1", path = "../renderer-base" }

log="0.4"