[package]
name = "renderer-shell-vulkan-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
sdl2 = { version = ">=0.33" }

renderer-shell-vulkan = { version = "0.1", path = "../renderer-shell-vulkan" }

log="0.4"