[package]
name = "renderer-shell-vulkan"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
vk-mem = "0.2"
backtrace = "0.3"
fnv = "1.0"

log="0.4"
crossbeam-channel = "0.4"