[package]
name = "renderer-shell-vulkan"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
vk-mem = "0.2"
backtrace = "0.3"
fnv = "1.0"

log = "0.4"
crossbeam-channel = "0.4"

profiling = "0.1"
puffin = { version = "0.3.1", optional = true }
optick = { version = "1.3.4", optional = true }
tracing = { version = "0.1", optional = true }
superluminal-perf = { version = "0.1", optional = true }

[features]
default = []
static-vulkan = []
profile-with-puffin = ["profiling/profile-with-puffin", "puffin"]
profile-with-optick = ["profiling/profile-with-optick", "optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal", "superluminal-perf"]
profile-with-tracing = ["profiling/profile-with-tracing", "tracing"]