[package]
name = "renderer-shell-vulkan"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
vk-mem = "0.2"
backtrace = "0.3"
fnv = "1.0"

log = "0.4"
crossbeam-channel = "0.4"

profiling = "0.1.4"

[features]
default = []
static-vulkan = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
