[package]
name = "renderer-visibility"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
glam = "0.8.6"
fnv = "1.0"

renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }