[package]
name = "renderer"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
sdl2 = { version = ">=0.33" }
imgui = "0.3"
#image = "0.23.3"

renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }
renderer-shell-vulkan-sdl2 = { path = "../renderer-shell-vulkan-sdl2"}

renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }
renderer-assets = { path = "../renderer-assets" }
renderer-features = { path = "../renderer-features" }
renderer-resources = { path = "../renderer-resources" }
renderer-visibility = { path = "../renderer-visibility" }

log="0.4"
env_logger = "0.6"

glam = "0.8.6"

#legion = "0.2.1"
legion = { git = "https://github.com/TomGillen/legion.git" }
atelier-assets = { git = "https://github.com/amethyst/atelier-assets" }

structopt = "0.3"
crossbeam-channel = "0.4.2"

[dev-dependencies]