[package]
name = "renderer"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
sdl2 = { version = ">=0.33" }
imgui = "0.4"
image = "0.23"

renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }
renderer-shell-vulkan-sdl2 = { path = "../renderer-shell-vulkan-sdl2"}

renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }
renderer-assets = { path = "../renderer-assets" }
renderer-visibility = { path = "../renderer-visibility" }

fnv = "1.0"

log="0.4"

glam = "0.8.6"

serde = "1"
serde_bytes = "0.11"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "indirect_handles" }

structopt = "0.3"
crossbeam-channel = "0.4.2"

[dev-dependencies]
env_logger = "0.6"
legion = { version = "0.3.0", default-features = false }

[features]
default = []
static-vulkan = ["renderer-shell-vulkan/static-vulkan"]