[package]
name = "renderer"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer-shell-vulkan = { path = "../renderer-shell-vulkan" }
renderer-shell-vulkan-sdl2 = { path = "../renderer-shell-vulkan-sdl2"}

renderer-base = { path = "../renderer-base" }
renderer-nodes = { path = "../renderer-nodes" }
renderer-assets = { path = "../renderer-assets", optional = true }
renderer-resources = { path = "../renderer-resources" }
renderer-visibility = { path = "../renderer-visibility" }

log = "0.4"

[dev-dependencies]
env_logger = "0.6"
legion = { version = "0.3.0", default-features = false }
sdl2 = { version = ">=0.33" }
ash = ">=0.30"
glam = "0.8.6"

[features]
default = []
static-vulkan = ["renderer-shell-vulkan/static-vulkan"]
assets = ["renderer-assets"]

[[example]]
name = "triangle_graph"
required-features = []

[[example]]
name = "triangle"
required-features = []

[[example]]
name = "nodes_api_design"
required-features = []