[package]
name = "shader-processor"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
spirv-reflect = "0.2"
#syn = { version = "1.0.48", features = ["derive"] }
fnv = "1.0"
#peg = "0.6"
#logos = "0.11"
shaderc = "0.6"


[features]
#trace = ["peg/trace"]
#default = ["trace"]