[package]
name = "shader-processor"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

[dependencies]
renderer-assets = { path = "../renderer-assets" }
renderer-resources = { path = "../renderer-resources" }

fnv = "1.0"
structopt = "0.3"
spirv-reflect = "0.2"
shaderc = "0.6"
spirv_cross = { version = "0.22", features = ["glsl", "hlsl", "msl"] }
glob = "0.3"
#memoffset = "0.6"

ron = "0.5"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.6"
heck = "0.3"

[dev-dependencies]