[package]
name = "cli"
version = "0.0.3"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
demo = { path = ".."}
log = "0.4"
env_logger = "0.6"
distill = { version = "=0.0.2", features = ["serde_importers"] }
distill-cli = { git = "https://github.com/amethyst/distill", rev = "36bb5e48daa5fdebad290674eef55f6328d6135c" }
futures-lite = "1.3.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["io-std", "rt-util", "tcp", "io-util", "time"] }
