[package]
name = "shaders"
version = "0.0.2"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rafx-resources = { path = "../../rafx-resources" }

[features]
default = ["rafx-vulkan"]
rafx-vulkan = ["rafx-resources/rafx-vulkan"]
rafx-metal = ["rafx-resources/rafx-metal"]

[dev-dependencies]
memoffset = "0.6"
